--- a/ebookGenerator/resources/StaticFiles/xpp/scss/common.scss
+++ b/ebookGenerator/resources/StaticFiles/xpp/scss/common.scss
@@ -1,6 +1,6 @@
 @import "constants.scss";
 .no-indent:first-child {
-    margin-left: calc(-1.1 * 1em);
+    margin-left: calc(-1.5 * 1em);
 }
 
 .publication {
